feat(projects): implement deep project clone
